--- a/book-catalogue/style.css
+++ b/book-catalogue/style.css
@@ -1,16 +1,10 @@
-/* body {
-    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
-                url("./assets/images/background.png");
-    background-size: cover;
-    background-blend-mode: overlay;
-} */
-
 body {
-    background-image: url("./assets/images/background2.png");
+    /* background-image: url("./assets/images/background.png"); */
+    background-color: antiquewhite;
     height: 100%;
     background-position: center;
-    background-repeat:repeat;
-    background-size: cover;
+    background-repeat: space repeat;
+    background-size: stretch;
 }
 
 h1,h2{
