--- a/book-catalogue/style.css
+++ b/book-catalogue/style.css
@@ -7,7 +7,7 @@ body {
     background-size: stretch;
 }
 
-h1,h2{
+h1,h2,p{
     font-family: work sans;
 }
 
@@ -29,5 +29,15 @@ h1,h2{
     border-radius: 10px;
     padding: 20px;
     margin-top: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.card{
+    background-color: white;
+    height: 100%;
+    width: 100% ;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
