--- a/book-catalogue/style.css
+++ b/book-catalogue/style.css
@@ -15,6 +15,22 @@ h1,h2,p{
     font-size: 3rem;
 }
 
+#title{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#intro-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#intro-paragraph{
+    text-align: justify;
+}
+
 .book-list{
     background-color: rgb(244, 244, 244);
     border-radius: 10px;
